--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -2,4 +2,4 @@
 @import "core/variables";
 @import "core/reset";
 @import "layout/presentation";
-@import "layout/backgroundAnimations";
+@import "layout/aboutMe";
