Map data to render project list

--- a/src/stylesheets/layout/_aboutMe.scss
+++ b/src/stylesheets/layout/_aboutMe.scss
@@ -1,6 +1,6 @@
 .AboutMe {
   padding: 75px;
-  background: linear-gradient($colorPink, $colorDirtyWhite);
+  background: linear-gradient($colorPink, $colorLightPink);
   &__title {
     font-family: $fontMono;
     padding-bottom: 45px;
