--- a/src/stylesheets/core/_variables.scss
+++ b/src/stylesheets/core/_variables.scss
@@ -1,13 +1,12 @@
 //BRAND PALETTE
-$colorWhite: white;
-$colorDirtyWhite: #b7c1de;
-$colorDarkGreen: #06394c;
-$colorBlueGray: #6a97b8;
-$colorEggplant: #7b1346;
+$colorAqua: #07e8ff;
+$colorYellow: #f8c000;
+$colorBlue: #a4bfe4;
+$colorPink2: #ffa4cb;
+$colorNoWhite: #fcf8f1;
 $colorPink: #cb0c59;
-$colorSoftPink: #e390ba;
-$colorLightPink: #edbcd1;
 $colorNoBlack: #080c14;
+$colorWhite: white;
 
 //FONTS
 $fontMontserrat: "Montserrat", sans-serif;
