--- a/src/stylesheets/layout/_aboutMe.scss
+++ b/src/stylesheets/layout/_aboutMe.scss
@@ -1,5 +1,24 @@
 .AboutMe {
   padding: 75px;
+  background: $colorNoWhite;
+  &__title {
+    font-family: $fontMono;
+    padding-bottom: 45px;
+  }
+  &__content {
+    text-align: justify;
+    font-size: 1.2rem;
+    line-height: 30px;
+    &-title {
+      padding-bottom: 25px;
+    }
+    &-paragraph {
+      padding-bottom: 25px;
+    }
+  }
+}
+/*.AboutMe {
+  padding: 75px;
   background: linear-gradient($colorPink, $colorLightPink);
   &__title {
     font-family: $fontMono;
@@ -17,3 +36,4 @@
     }
   }
 }
+*/
