--- a/src/stylesheets/layout/_projects.scss
+++ b/src/stylesheets/layout/_projects.scss
@@ -1,18 +1,18 @@
 .projects {
-  background: linear-gradient($colorLightPink, $colorDirtyWhite);
+  background: $colorNoWhite;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   &__card {
     display: flex;
     flex-direction: column;
-    border: 3px solid $colorEggplant;
+    border: 3px solid $colorPink;
     box-shadow: $colorPink 5px 8px 10px;
     margin: 25px;
     padding: 25px;
     &:hover {
-      border: 3px solid $colorDarkGreen;
-      box-shadow: $colorEggplant 5px 8px 10px;
+      border: 3px solid $colorNoBlack;
+      box-shadow: $colorPink 5px 8px 10px;
       transform: scale(1.01);
     }
     &--img {
