--- a/src/stylesheets/layout/_projects.scss
+++ b/src/stylesheets/layout/_projects.scss
@@ -4,23 +4,34 @@
   flex-wrap: wrap;
   justify-content: center;
   &__card {
-    display: flex;
-    flex-direction: column;
-    border: 3px solid $colorPink;
-    box-shadow: $colorPink 5px 8px 10px;
-    margin: 25px;
-    padding: 25px;
-    &:hover {
-      border: 3px solid $colorNoBlack;
-      box-shadow: $colorPink 5px 8px 10px;
-      transform: scale(1.01);
+    width: 50%;
+    height: 500px;
+    margin-bottom: 50px;
+
+    &-items {
+      height: 500px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      box-shadow: $colorPink2 5px 8px 10px;
+      border-radius: 25px;
+      margin: 25px;
+      padding: 25px;
+
+      &:hover {
+        box-shadow: $colorBlue 5px 8px 10px;
+        transform: scale(1.01);
+      }
     }
+    &--links {
+      display: flex;
+      width: 100%;
+      justify-content: space-around;
+    }
+
     &--img {
       width: 250px;
     }
-  }
-
-  &--links {
-    display: flex;
   }
 }
