--- a/src/stylesheets/core/_reset.scss
+++ b/src/stylesheets/core/_reset.scss
@@ -7,6 +7,7 @@
   outline: none;
   box-sizing: border-box;
   font-family: $fontMontserrat;
+  background: $colorNoWhite;
 }
 body {
   height: 100vh;
