--- a/src/stylesheets/layout/_aboutMe.scss
+++ b/src/stylesheets/layout/_aboutMe.scss
@@ -1,24 +1,27 @@
 .AboutMe {
   padding: 75px;
-  background: $colorNoWhite;
   background-image: url("../../images/circles/circleAqua.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: -250px 0;
 
   &__title {
+    background: transparent;
     font-family: $fontMono;
     padding-bottom: 45px;
     z-index: 99;
   }
   &__content {
+    background: transparent;
     text-align: justify;
     font-size: 1.2rem;
     line-height: 30px;
     &-title {
+      background: transparent;
       padding-bottom: 25px;
     }
     &-paragraph {
+      background: transparent;
       padding-bottom: 25px;
     }
   }
