Add titles mixin

--- a/src/stylesheets/layout/_projects.scss
+++ b/src/stylesheets/layout/_projects.scss
@@ -1,7 +1,7 @@
 .projectsTitle {
   text-align: center;
-  font-size: 2rem;
-  padding-bottom: 25px;
+  @include titles(); /* font-size: 2rem;
+  padding-bottom: 25px;*/
 }
 .projects {
   display: flex;
