Add skills component

--- a/src/stylesheets/layout/_aboutMe.scss
+++ b/src/stylesheets/layout/_aboutMe.scss
@@ -1,5 +1,5 @@
 .AboutMe {
-  padding: 75px;
+  padding: 0 75px;
   background-image: url("../../images/circles/circleAqua.png");
   background-size: contain;
   background-repeat: no-repeat;
