--- a/src/stylesheets/layout/_tech.scss
+++ b/src/stylesheets/layout/_tech.scss
@@ -1,4 +1,5 @@
 .tech {
+  padding: 0 75px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,6 +17,7 @@
     align-items: center;
     background: $colorBlue;
     border-radius: 50px;
+    box-shadow: 3px 3px 10px $colorPink2;
     width: 65px;
     height: 65px;
     margin: 10px;
