--- a/src/stylesheets/layout/_aboutMe.scss
+++ b/src/stylesheets/layout/_aboutMe.scss
@@ -8,7 +8,7 @@
   &__title {
     background: transparent;
     font-family: $fontMono;
-    padding-bottom: 45px;
+    padding: 45px 0;
     z-index: 99;
   }
   &__content {
