--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,8 +1,9 @@
 @import "core/mixins";
 @import "core/variables";
 @import "core/reset";
+@import "layout/burgerMenu";
+@import "layout/mediaHeader";
 @import "layout/presentation";
 @import "layout/aboutMe";
 @import "layout/projects";
-@import "layout/burgerMenu";
 @import "layout/tech";
