--- a/src/stylesheets/layout/_tech.scss
+++ b/src/stylesheets/layout/_tech.scss
@@ -3,10 +3,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: url("../../images/circles/circlePink.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: -100px;
   &__title {
     @include titles();
   }
   &__itemsWrap {
+    background-image: url("../../images/circles/circleYellow.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 5px 5px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
