Add ScrollPosition and visible button function to go up

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -4,6 +4,7 @@
 @import "layout/burgerMenu";
 @import "layout/mediaHeader";
 @import "layout/presentation";
+@import "layout/goTop";
 @import "layout/aboutMe";
 @import "layout/projects";
 @import "layout/tech";
