--- a/src/stylesheets/layout/_footer.scss
+++ b/src/stylesheets/layout/_footer.scss
@@ -11,8 +11,11 @@
     height: 150px;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
+    @include tablet() {
+      align-items: flex-end;
+    }
   }
   &__items {
     padding: 10px 30px 0;
