Add scroll up on click

--- a/src/stylesheets/layout/_goTop.scss
+++ b/src/stylesheets/layout/_goTop.scss
@@ -10,6 +10,7 @@
     left: 90%;
     cursor: pointer;
     border-bottom: 1px dotted $colorNoBlack;
+    background: rgba(255, 255, 255, 0.8);
     box-shadow: 2px 2px 5px $colorYellow;
     border-radius: 25px;
     width: 40px;
