Change left position of  scroll top button in breakpoints

--- a/src/stylesheets/layout/_goTop.scss
+++ b/src/stylesheets/layout/_goTop.scss
@@ -10,12 +10,18 @@
     left: 90%;
     cursor: pointer;
     border-bottom: 1px dotted $colorNoBlack;
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(252, 248, 241, 0.8);
     box-shadow: 2px 2px 5px $colorYellow;
     border-radius: 25px;
     width: 40px;
     height: 40px;
     text-align: center;
     line-height: 40px;
+    @include tablet() {
+      left: 92%;
+    }
+    @include desktop() {
+      left: 96.5%;
+    }
   }
 }
