Add UX improvements issue#19

--- a/src/stylesheets/layout/_aboutMe.scss
+++ b/src/stylesheets/layout/_aboutMe.scss
@@ -9,7 +9,7 @@
     background: transparent;
     font-family: $fontMono;
     padding: 45px 0;
-    z-index: 99;
+    text-transform: uppercase;
   }
   &__content {
     background: transparent;
