Change fontsize in mobile and breakpoints

--- a/src/stylesheets/core/_reset.scss
+++ b/src/stylesheets/core/_reset.scss
@@ -10,6 +10,7 @@ html {
   outline: none;
   box-sizing: border-box;
   font-family: $fontMontserrat;
+  font-size: 0.9rem;
 }
 body {
   height: 100vh;
