--- a/src/stylesheets/layout/_aboutMe.scss
+++ b/src/stylesheets/layout/_aboutMe.scss
@@ -8,21 +8,24 @@
   &__title {
     background: transparent;
     font-family: $fontMono;
-    padding: 45px 0;
+    padding: 45px 0 25px;
     text-transform: uppercase;
+    font-size: 1.3rem;
   }
   &__content {
-    background: transparent;
     text-align: justify;
-    font-size: 1.2rem;
     line-height: 30px;
     &-title {
       background: transparent;
       padding-bottom: 25px;
+      @include tablet() {
+        font-size: 1.2rem;
+      }
     }
     &-paragraph {
       background: transparent;
       padding-bottom: 25px;
+      @include allFonts();
     }
   }
 }
