--- a/src/stylesheets/layout/_projects.scss
+++ b/src/stylesheets/layout/_projects.scss
@@ -57,10 +57,12 @@
     &--title {
       text-align: center;
       padding-bottom: 25px;
+      font-size: 1.2rem;
     }
     &--description {
       padding-bottom: 25px;
       text-align: justify;
+      @include allFonts();
     }
     &--links {
       display: flex;
