--- a/src/stylesheets/layout/_goTop.scss
+++ b/src/stylesheets/layout/_goTop.scss
@@ -6,16 +6,16 @@
   display: block;
   &__text {
     position: fixed;
-    top: 90%;
+    bottom: 5%;
     left: 90%;
     cursor: pointer;
     background: rgba(252, 248, 241, 0.8);
     box-shadow: 2px 2px 5px $colorYellow;
     border-radius: 25px;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     text-align: center;
-    line-height: 40px;
+    line-height: 30px;
     @include tablet() {
       left: 94%;
     }
