Fix details in components and styles

--- a/src/stylesheets/layout/_presentation.scss
+++ b/src/stylesheets/layout/_presentation.scss
@@ -9,7 +9,11 @@
     width: 80%;
   }
   &__facts {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    &--fact {
+      text-align: center;
+    }
   }
 }
 
