Change scale on project cards for desktop breakpoint

--- a/src/stylesheets/layout/_projects.scss
+++ b/src/stylesheets/layout/_projects.scss
@@ -47,7 +47,10 @@
       margin: 25px;
       padding: 25px;
       @include tablet() {
-        height: 550px;
+        height: 500px;
+      }
+      @include desktop() {
+        transform: scale(0.9);
       }
     }
     &--title {
