--- a/src/stylesheets/layout/_presentation.scss
+++ b/src/stylesheets/layout/_presentation.scss
@@ -1,9 +1,9 @@
 .header {
-  height: 100%;
+  height: 100vh;
 }
 
 .presentation {
-  height: 100%;
+  height: 100vh;
   display: grid;
   place-items: center;
   justify-content: center;
