Change copy and button for contact in footer

--- a/src/stylesheets/layout/_aboutMe.scss
+++ b/src/stylesheets/layout/_aboutMe.scss
@@ -28,6 +28,9 @@
       background: transparent;
       padding-bottom: 25px;
       @include allFonts();
+      &-bold {
+        font-weight: bold;
+      }
     }
   }
 }
