--- a/src/stylesheets/layout/_projects.scss
+++ b/src/stylesheets/layout/_projects.scss
@@ -29,7 +29,7 @@
     width: 70%;
     margin-bottom: 50px;
 
-    @include tablet() {
+    @include mobileMedium() {
       width: 50%;
     }
     @include desktop() {
