--- a/src/stylesheets/layout/_presentation.scss
+++ b/src/stylesheets/layout/_presentation.scss
@@ -1,23 +1,33 @@
 .header {
   height: 100vh;
+  width: 80vw;
 }
 
 .presentation {
   height: 100vh;
+  width: 100vw;
   display: grid;
   place-items: center;
-  justify-content: center;
-  align-items: center;
+  align-self: center;
+  justify-self: center;
 
   &__portrait {
     height: 80%;
   }
   &__facts {
+    width: 80%;
     display: flex;
     align-items: center;
-    height: 2rem;
+    line-height: 1.5rem;
     &--fact {
       text-align: center;
+    }
+    &--shuffle {
+      margin: 5px;
+      padding: 5px;
+      border-radius: 25px;
+      border: 1px solid $colorPink2;
+      box-shadow: 2px 2px 2px $colorPink2;
     }
   }
 }
