--- a/src/stylesheets/layout/_presentation.scss
+++ b/src/stylesheets/layout/_presentation.scss
@@ -1,22 +1,20 @@
 .header {
   height: 100vh;
-  width: 80vw;
+  //width: 80vw;
 }
 
 .presentation {
   height: 100vh;
-  width: 100vw;
   display: grid;
   place-items: center;
-  align-self: center;
-  justify-self: center;
-
+  align-content: space-around;
   &__portrait {
     height: 80%;
   }
   &__facts {
     width: 80%;
     display: flex;
+    align-self: center;
     align-items: center;
     line-height: 1.5rem;
     &--fact {
