Change card width formobile

--- a/src/stylesheets/layout/_presentation.scss
+++ b/src/stylesheets/layout/_presentation.scss
@@ -12,7 +12,7 @@
     height: 80%;
   }
   &__facts {
-    width: 80%;
+    padding: 0 7%;
     display: flex;
     align-self: center;
     align-items: center;
